fix bug #30453, categories button too small

--- a/resources/jquery/jquery.mwCoolCats.css
+++ b/resources/jquery/jquery.mwCoolCats.css
@@ -50,12 +50,6 @@
 	position: static;
 }
 
-/* Make category add button smaller */
-.cat-widget .ui-button-text {
-	padding: 0;
-}
-
-
 /* Utilities */
 .pkg:after, #content-inner:after {
     content: " ";
